test/compile_errors/err_label_inline_defer.w
//! expect-check-fail: label must start a statement

fn main:
    defer: 'cleanup while true:
        break 'cleanup
